syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
                                    post:"/sayHello"
                                    body:"*"
                                };
    }

    // 单项rpc
    rpc GetUsernameById (Id) returns (Username) {
        //         proto-gateway能够生产restful反向代理，目前只是对go有效
        option (google.api.http) = {
                                    post:"/getUserNameById"
                                    body:"*"
                                };
    }

    rpc GetIdByUserName(Username) returns (Id) {
         option (google.api.http) = {
                                    get:"/getIdByUserName/{username}"
                                };
    }

    rpc deleteUsernameById(Id) returns (Username) {
        option (google.api.http) = {
                                    delete:"/deleteUsernameById/{id}"
                                    body:"*"
                                };
    }

    rpc updateUsernameById(Id) returns (Username) {
        option (google.api.http) = {
                                    put:"/updateUsernameById/{id}"
                                    body:"*"
                                };
    }

}

// The request message containing the user's name.
message HelloRequest {
    message SubMessage {
        int32 age = 1;
    }
    string name = 1;
    SubMessage sub = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
    int32 age = 2;
    string sex = 3;
}

// message gRPC中service不能直接使用基本类型，必须通过message包装
message Username {
    string username = 1;
}
message Id {
    int64 id = 1;
}
